--- a/src/gerardohasbum_lab6p2/LeagueFantasy.form
+++ b/src/gerardohasbum_lab6p2/LeagueFantasy.form
@@ -581,10 +581,10 @@
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="4">
-                    <StringItem index="0" value="Item 1"/>
-                    <StringItem index="1" value="Item 2"/>
-                    <StringItem index="2" value="Item 3"/>
-                    <StringItem index="3" value="Item 4"/>
+                    <StringItem index="0" value="Delantero"/>
+                    <StringItem index="1" value="Portero"/>
+                    <StringItem index="2" value="Defensa"/>
+                    <StringItem index="3" value="MedioCampista"/>
                   </StringArray>
                 </Property>
               </Properties>
